# yt-subtitle-downloader

./: pyproject.toml
yt_subtitle_downloader/: extractor.py  formatter.py
yt_subtitle_downloader/deepmultilingualpunctuation/: punctuationmodel.py
