[tool.poetry]
name = "yt_subtitle_downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "yt_subtitle_downloader"}]

[tool.poetry.dependencies]
python = "^3.8"
youtube-transcript-api = "^0.5.0"
transformers = "^4.25.1"
sentencepiece = "^0.1.97"
protobuf = "3.20.1"
torch = "^1.13.1"
truecase = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
